5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1712_2504.log
== TEST (2019-05-14 15:39:29) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( q2 < q1 ):
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
print( dias )	
-- OUTPUT:
15.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:41:30) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 ):
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
	if()
print( dias )	
-- ERROR:
File "XXXX", line 15
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:41:45) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 ):
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:42:19) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 ):
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias + 2)	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 15:42:37) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 ):
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias + 2)	
-- EXECUTION TIME:
0.199031
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
10
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
6
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 15:46:11) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 and p1 < p2 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- EXECUTION TIME:
0.198847
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
8
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:50:58) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 and p1 < p2 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
	if (c2 == 2 * c1):
		print( dias )
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:51:53) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 == 2 * c1 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:00:30) 
-- CODE:
q1 = int(input("Virus no sangue: "))
q2 = int(input("leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 != 2 * c1 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- OUTPUT:
35164
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:07:06) 
-- CODE:
q1 = int(input("Quantidade inicial de virus no sangue: "))
q2 = int(input("Quantidade inicial de leucócitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:07:39) 
-- CODE:
q1 = int(input("Quantidade inicial de virus no sangue: "))
q2 = int(input("Quantidade inicial de leucócitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:08:18) 
-- CODE:
q1 = int(input("Quantidade inicial de virus no sangue: "))
q2 = int(input("Quantidade inicial de leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < c1 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:11:29) 
-- CODE:
q1 = int(input("Quantidade inicial de virus no sangue: "))
q2 = int(input("Quantidade inicial de leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < 2*c1 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:12:32) 
-- CODE:
q1 = int(input("Quantidade inicial de virus no sangue: "))
q2 = int(input("Quantidade inicial de leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < 2*c1 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:12:53) 
-- CODE:
q1 = int(input("Quantidade inicial de virus no sangue: "))
q2 = int(input("Quantidade inicial de leucocitos no sangue: "))
p1 = int(input("Percentual diaria do virus: "))/100
p2 = int(input("Percentual diaria do leucocitos: "))/100

dias = 0
c1 = q1
c2 = q2

while ( c2 < 2*c1 ):
	
	c2 = c2 + ( c2*p2 )
	c1 = c1 + ( c1*p1 )
	dias = dias + 1
	
print( dias )
-- EXECUTION TIME:
0.187516
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
